@@ -1,0 +1,2 @@
+These are public domain sounds, downloaded from
+http://www.partnersinrhyme.com/soundfx/warsounds.shtml
